v0.0.1/modules/schema/pages/class/GovSteamFV4.adoc
= `GovSteamFV4`
:toclevels: 4


+++Detailed electro-hydraulic governor for steam unit.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovSteamFV4`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovSteamFV4`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
GovSteamFV4 {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





































































































AsynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TurbineLoadControllerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





















































GovSteamFV4 -> AsynchronousMachineDynamics: AsynchronousMachineDynamics


GovSteamFV4 -> TurbineLoadControllerDynamics: TurbineLoadControllerDynamics


GovSteamFV4 -> SynchronousMachineDynamics: SynchronousMachineDynamics


GovSteamFV4 -> DiagramObject: DiagramObjects


GovSteamFV4 -> InstanceSet: InstanceSet


GovSteamFV4 -> Name: Names


GovSteamFV4 -> ChangeSetMember: PropertiesCIMDataObject


GovSteamFV4 -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<cpsmn,`cpsmn`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum value of pressure regulator output (<i>Cpsmn</i>).  Typical value = -1.+++

| <<cpsmx,`cpsmx`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum value of pressure regulator output (<i>Cpsmx</i>).  Typical value = 1.+++

| <<crmn,`crmn`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum value of regulator set-point (<i>Crmn</i>).  Typical value = 0.+++

| <<crmx,`crmx`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum value of regulator set-point (<i>Crmx</i>).  Typical value = 1,2.+++

| <<kdc,`kdc`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Derivative gain of pressure regulator (<i>Kdc</i>).  Typical value = 1.+++

| <<kf1,`kf1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Frequency bias (reciprocal of droop) (<i>Kf1</i>).  Typical value = 20.+++

| <<kf3,`kf3`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Frequency control (reciprocal of droop) (<i>Kf3</i>).  Typical value = 20.+++

| <<khp,`khp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Fraction  of total turbine output generated by HP part (<i>Khp</i>).  Typical value = 0,35.+++

| <<kic,`kic`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Integral gain of pressure regulator (<i>Kic</i>).  Typical value = 0,0033.+++

| <<kip,`kip`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Integral gain of pressure feedback regulator (<i>Kip</i>).  Typical value = 0,5.+++

| <<kit,`kit`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Integral gain of electro-hydraulic regulator (<i>Kit</i>).  Typical value = 0,04.+++

| <<kmp1,`kmp1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++First gain coefficient of  intercept valves characteristic (<i>Kmp1</i>).  Typical value = 0,5.+++

| <<kmp2,`kmp2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Second gain coefficient of intercept valves characteristic (<i>Kmp2</i>).  Typical value = 3,5.+++

| <<kpc,`kpc`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Proportional gain of pressure regulator (<i>Kpc</i>).  Typical value = 0,5.+++

| <<kpp,`kpp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Proportional gain of pressure feedback regulator (<i>Kpp</i>).  Typical value = 1.+++

| <<kpt,`kpt`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Proportional gain of electro-hydraulic regulator (<i>Kpt</i>).  Typical value = 0,3.+++

| <<krc,`krc`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum variation of fuel flow (<i>Krc</i>).  Typical value = 0,05.+++

| <<ksh,`ksh`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Pressure loss due to flow friction in the boiler tubes (<i>Ksh</i>).  Typical value = 0,08.+++

| <<lpi,`lpi`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum negative power error (<i>Lpi</i>).  Typical value = -0,15.+++

| <<lps,`lps`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum positive power error (<i>Lps</i>).  Typical value = 0,03.+++

| <<mnef,`mnef`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Lower limit for frequency correction (<i>MN</i><i><sub>EF</sub></i>).  Typical value = -0,05.+++

| <<mxef,`mxef`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Upper limit for frequency correction (<i>MX</i><i><sub>EF</sub></i>).  Typical value = 0,05.+++

| <<pr1,`pr1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++First value of pressure set point static characteristic (<i>Pr1</i>).  Typical value = 0,2.+++

| <<pr2,`pr2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Second value of pressure set point static characteristic, corresponding to <i>Ps0</i> = 1,0 PU (<i>Pr2</i>).  Typical value = 0,75.+++

| <<psmn,`psmn`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum value of pressure set point static characteristic (<i>Psmn</i>).  Typical value = 1.+++

| <<rsmimn,`rsmimn`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum value of integral regulator (<i>Rsmimn</i>).  Typical value = 0.+++

| <<rsmimx,`rsmimx`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum value of integral regulator (<i>Rsmimx</i>).  Typical value = 1,1.+++

| <<rvgmn,`rvgmn`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum value of integral regulator (<i>Rvgmn</i>).  Typical value = 0.+++

| <<rvgmx,`rvgmx`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum value of integral regulator (<i>Rvgmx</i>).  Typical value = 1,2.+++

| <<srmn,`srmn`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum valve opening (<i>Srmn</i>).  Typical value = 0.+++

| <<srmx,`srmx`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum valve opening (<i>Srmx</i>).  Typical value = 1,1.+++

| <<srsmp,`srsmp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Intercept valves characteristic discontinuity point (<i>Srsmp</i>).  Typical value = 0,43.+++

| <<svmn,`svmn`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum regulator gate closing velocity (<i>Svmn</i>).  Typical value = -0,0333.+++

| <<svmx,`svmx`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum regulator gate opening velocity (<i>Svmx</i>).  Typical value = 0,0333.+++

| <<ta,`ta`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Control valves rate opening time (<i>Ta</i>) (&gt;= 0).  Typical value = 0,8.+++

| <<tam,`tam`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intercept valves rate opening time (<i>Tam</i>) (&gt;= 0).  Typical value = 0,8.+++

| <<tc,`tc`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Control valves rate closing time (<i>Tc</i>) (&gt;= 0).  Typical value = 0,5.+++

| <<tcm,`tcm`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intercept valves rate closing time (<i>Tcm</i>) (&gt;= 0).  Typical value = 0,5.+++

| <<tdc,`tdc`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Derivative time constant of pressure regulator (<i>Tdc</i>) (&gt;= 0).  Typical value = 90.+++

| <<tf1,`tf1`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of fuel regulation (<i>Tf1</i>) (&gt;= 0).  Typical value = 10.+++

| <<tf2,`tf2`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of steam chest (<i>Tf2</i>) (&gt;= 0).  Typical value = 10.+++

| <<thp,`thp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++High pressure (HP) time constant of the turbine (<i>Thp</i>) (&gt;= 0).  Typical value = 0,15.+++

| <<tmp,`tmp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Low pressure (LP) time constant of the turbine (<i>Tmp</i>) (&gt;= 0).  Typical value = 0,4.+++

| <<trh,`trh`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Reheater  time constant of the turbine (<i>Trh</i>) (&gt;= 0).  Typical value = 10.+++

| <<tv,`tv`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Boiler time constant (<i>Tv</i>) (&gt;= 0).  Typical value = 60.+++

| <<ty,`ty`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Control valves servo time constant (<i>Ty</i>) (&gt;= 0).  Typical value = 0,1.+++

| <<y,`y`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Coefficient of linearized equations of turbine (Stodola formulation) (<i>Y</i>).  Typical value = 0,13.+++

| <<yhpmn,`yhpmn`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum control valve position (<i>Yhpmn</i>).  Typical value = 0.+++

| <<yhpmx,`yhpmx`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum control valve position (<i>Yhpmx</i>).  Typical value = 1,1.+++

| <<ympmn,`ympmn`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum intercept valve position (<i>Ympmn</i>).  Typical value = 0.+++

| <<ympmx,`ympmx`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum intercept valve position (<i>Ympmx</i>).  Typical value = 1,1.+++

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#cpsmn]
=== `cpsmn`
+++Minimum value of pressure regulator output (<i>Cpsmn</i>).  Typical value = -1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.cpsmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#cpsmx]
=== `cpsmx`
+++Maximum value of pressure regulator output (<i>Cpsmx</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.cpsmx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#crmn]
=== `crmn`
+++Minimum value of regulator set-point (<i>Crmn</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.crmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#crmx]
=== `crmx`
+++Maximum value of regulator set-point (<i>Crmx</i>).  Typical value = 1,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.crmx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#kdc]
=== `kdc`
+++Derivative gain of pressure regulator (<i>Kdc</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kdc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kf1]
=== `kf1`
+++Frequency bias (reciprocal of droop) (<i>Kf1</i>).  Typical value = 20.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kf1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kf3]
=== `kf3`
+++Frequency control (reciprocal of droop) (<i>Kf3</i>).  Typical value = 20.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kf3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#khp]
=== `khp`
+++Fraction  of total turbine output generated by HP part (<i>Khp</i>).  Typical value = 0,35.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.khp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kic]
=== `kic`
+++Integral gain of pressure regulator (<i>Kic</i>).  Typical value = 0,0033.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kic`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kip]
=== `kip`
+++Integral gain of pressure feedback regulator (<i>Kip</i>).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kip`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kit]
=== `kit`
+++Integral gain of electro-hydraulic regulator (<i>Kit</i>).  Typical value = 0,04.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kit`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kmp1]
=== `kmp1`
+++First gain coefficient of  intercept valves characteristic (<i>Kmp1</i>).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kmp1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kmp2]
=== `kmp2`
+++Second gain coefficient of intercept valves characteristic (<i>Kmp2</i>).  Typical value = 3,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kmp2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kpc]
=== `kpc`
+++Proportional gain of pressure regulator (<i>Kpc</i>).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kpc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kpp]
=== `kpp`
+++Proportional gain of pressure feedback regulator (<i>Kpp</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kpp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kpt]
=== `kpt`
+++Proportional gain of electro-hydraulic regulator (<i>Kpt</i>).  Typical value = 0,3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kpt`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#krc]
=== `krc`
+++Maximum variation of fuel flow (<i>Krc</i>).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.krc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ksh]
=== `ksh`
+++Pressure loss due to flow friction in the boiler tubes (<i>Ksh</i>).  Typical value = 0,08.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.ksh`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#lpi]
=== `lpi`
+++Maximum negative power error (<i>Lpi</i>).  Typical value = -0,15.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.lpi`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#lps]
=== `lps`
+++Maximum positive power error (<i>Lps</i>).  Typical value = 0,03.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.lps`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mnef]
=== `mnef`
+++Lower limit for frequency correction (<i>MN</i><i><sub>EF</sub></i>).  Typical value = -0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.mnef`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mxef]
=== `mxef`
+++Upper limit for frequency correction (<i>MX</i><i><sub>EF</sub></i>).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.mxef`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pr1]
=== `pr1`
+++First value of pressure set point static characteristic (<i>Pr1</i>).  Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.pr1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pr2]
=== `pr2`
+++Second value of pressure set point static characteristic, corresponding to <i>Ps0</i> = 1,0 PU (<i>Pr2</i>).  Typical value = 0,75.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.pr2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#psmn]
=== `psmn`
+++Minimum value of pressure set point static characteristic (<i>Psmn</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.psmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#rsmimn]
=== `rsmimn`
+++Minimum value of integral regulator (<i>Rsmimn</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.rsmimn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#rsmimx]
=== `rsmimx`
+++Maximum value of integral regulator (<i>Rsmimx</i>).  Typical value = 1,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.rsmimx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#rvgmn]
=== `rvgmn`
+++Minimum value of integral regulator (<i>Rvgmn</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.rvgmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#rvgmx]
=== `rvgmx`
+++Maximum value of integral regulator (<i>Rvgmx</i>).  Typical value = 1,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.rvgmx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#srmn]
=== `srmn`
+++Minimum valve opening (<i>Srmn</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.srmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#srmx]
=== `srmx`
+++Maximum valve opening (<i>Srmx</i>).  Typical value = 1,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.srmx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#srsmp]
=== `srsmp`
+++Intercept valves characteristic discontinuity point (<i>Srsmp</i>).  Typical value = 0,43.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.srsmp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#svmn]
=== `svmn`
+++Maximum regulator gate closing velocity (<i>Svmn</i>).  Typical value = -0,0333.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.svmn`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#svmx]
=== `svmx`
+++Maximum regulator gate opening velocity (<i>Svmx</i>).  Typical value = 0,0333.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.svmx`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#ta]
=== `ta`
+++Control valves rate opening time (<i>Ta</i>) (&gt;= 0).  Typical value = 0,8.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.ta`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tam]
=== `tam`
+++Intercept valves rate opening time (<i>Tam</i>) (&gt;= 0).  Typical value = 0,8.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tam`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tc]
=== `tc`
+++Control valves rate closing time (<i>Tc</i>) (&gt;= 0).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tcm]
=== `tcm`
+++Intercept valves rate closing time (<i>Tcm</i>) (&gt;= 0).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tcm`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tdc]
=== `tdc`
+++Derivative time constant of pressure regulator (<i>Tdc</i>) (&gt;= 0).  Typical value = 90.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tdc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tf1]
=== `tf1`
+++Time constant of fuel regulation (<i>Tf1</i>) (&gt;= 0).  Typical value = 10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tf1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tf2]
=== `tf2`
+++Time constant of steam chest (<i>Tf2</i>) (&gt;= 0).  Typical value = 10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tf2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#thp]
=== `thp`
+++High pressure (HP) time constant of the turbine (<i>Thp</i>) (&gt;= 0).  Typical value = 0,15.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.thp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tmp]
=== `tmp`
+++Low pressure (LP) time constant of the turbine (<i>Tmp</i>) (&gt;= 0).  Typical value = 0,4.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tmp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#trh]
=== `trh`
+++Reheater  time constant of the turbine (<i>Trh</i>) (&gt;= 0).  Typical value = 10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.trh`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#tv]
=== `tv`
+++Boiler time constant (<i>Tv</i>) (&gt;= 0).  Typical value = 60.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tv`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ty]
=== `ty`
+++Control valves servo time constant (<i>Ty</i>) (&gt;= 0).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.ty`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#y]
=== `y`
+++Coefficient of linearized equations of turbine (Stodola formulation) (<i>Y</i>).  Typical value = 0,13.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.y`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#yhpmn]
=== `yhpmn`
+++Minimum control valve position (<i>Yhpmn</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.yhpmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#yhpmx]
=== `yhpmx`
+++Maximum control valve position (<i>Yhpmx</i>).  Typical value = 1,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.yhpmx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ympmn]
=== `ympmn`
+++Minimum intercept valve position (<i>Ympmn</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.ympmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ympmx]
=== `ympmx`
+++Maximum intercept valve position (<i>Ympmx</i>).  Typical value = 1,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.ympmx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


