v1.1.0/modules/schema/pages/class/GovSteamFV4.adoc
= `GovSteamFV4`
:toclevels: 4


+++Detailed electro-hydraulic governor for steam unit.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovSteamFV4`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovSteamFV4`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<cpsmn,`cpsmn`>>
//| [[slots_table.cpsmn]]<<cpsmn,`cpsmn`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum value of pressure regulator output (<i>Cpsmn</i>).  Typical value = -1.+++
| _n/a_

| <<cpsmx,`cpsmx`>>
//| [[slots_table.cpsmx]]<<cpsmx,`cpsmx`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum value of pressure regulator output (<i>Cpsmx</i>).  Typical value = 1.+++
| _n/a_

| <<crmn,`crmn`>>
//| [[slots_table.crmn]]<<crmn,`crmn`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum value of regulator set-point (<i>Crmn</i>).  Typical value = 0.+++
| _n/a_

| <<crmx,`crmx`>>
//| [[slots_table.crmx]]<<crmx,`crmx`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum value of regulator set-point (<i>Crmx</i>).  Typical value = 1,2.+++
| _n/a_

| <<kdc,`kdc`>>
//| [[slots_table.kdc]]<<kdc,`kdc`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Derivative gain of pressure regulator (<i>Kdc</i>).  Typical value = 1.+++
| _n/a_

| <<kf1,`kf1`>>
//| [[slots_table.kf1]]<<kf1,`kf1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Frequency bias (reciprocal of droop) (<i>Kf1</i>).  Typical value = 20.+++
| _n/a_

| <<kf3,`kf3`>>
//| [[slots_table.kf3]]<<kf3,`kf3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Frequency control (reciprocal of droop) (<i>Kf3</i>).  Typical value = 20.+++
| _n/a_

| <<khp,`khp`>>
//| [[slots_table.khp]]<<khp,`khp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Fraction  of total turbine output generated by HP part (<i>Khp</i>).  Typical value = 0,35.+++
| _n/a_

| <<kic,`kic`>>
//| [[slots_table.kic]]<<kic,`kic`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Integral gain of pressure regulator (<i>Kic</i>).  Typical value = 0,0033.+++
| _n/a_

| <<kip,`kip`>>
//| [[slots_table.kip]]<<kip,`kip`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Integral gain of pressure feedback regulator (<i>Kip</i>).  Typical value = 0,5.+++
| _n/a_

| <<kit,`kit`>>
//| [[slots_table.kit]]<<kit,`kit`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Integral gain of electro-hydraulic regulator (<i>Kit</i>).  Typical value = 0,04.+++
| _n/a_

| <<kmp1,`kmp1`>>
//| [[slots_table.kmp1]]<<kmp1,`kmp1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++First gain coefficient of  intercept valves characteristic (<i>Kmp1</i>).  Typical value = 0,5.+++
| _n/a_

| <<kmp2,`kmp2`>>
//| [[slots_table.kmp2]]<<kmp2,`kmp2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Second gain coefficient of intercept valves characteristic (<i>Kmp2</i>).  Typical value = 3,5.+++
| _n/a_

| <<kpc,`kpc`>>
//| [[slots_table.kpc]]<<kpc,`kpc`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Proportional gain of pressure regulator (<i>Kpc</i>).  Typical value = 0,5.+++
| _n/a_

| <<kpp,`kpp`>>
//| [[slots_table.kpp]]<<kpp,`kpp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Proportional gain of pressure feedback regulator (<i>Kpp</i>).  Typical value = 1.+++
| _n/a_

| <<kpt,`kpt`>>
//| [[slots_table.kpt]]<<kpt,`kpt`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Proportional gain of electro-hydraulic regulator (<i>Kpt</i>).  Typical value = 0,3.+++
| _n/a_

| <<krc,`krc`>>
//| [[slots_table.krc]]<<krc,`krc`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum variation of fuel flow (<i>Krc</i>).  Typical value = 0,05.+++
| _n/a_

| <<ksh,`ksh`>>
//| [[slots_table.ksh]]<<ksh,`ksh`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Pressure loss due to flow friction in the boiler tubes (<i>Ksh</i>).  Typical value = 0,08.+++
| _n/a_

| <<lpi,`lpi`>>
//| [[slots_table.lpi]]<<lpi,`lpi`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum negative power error (<i>Lpi</i>).  Typical value = -0,15.+++
| _n/a_

| <<lps,`lps`>>
//| [[slots_table.lps]]<<lps,`lps`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum positive power error (<i>Lps</i>).  Typical value = 0,03.+++
| _n/a_

| <<mnef,`mnef`>>
//| [[slots_table.mnef]]<<mnef,`mnef`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Lower limit for frequency correction (<i>MN</i><i><sub>EF</sub></i>).  Typical value = -0,05.+++
| _n/a_

| <<mxef,`mxef`>>
//| [[slots_table.mxef]]<<mxef,`mxef`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Upper limit for frequency correction (<i>MX</i><i><sub>EF</sub></i>).  Typical value = 0,05.+++
| _n/a_

| <<pr1,`pr1`>>
//| [[slots_table.pr1]]<<pr1,`pr1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++First value of pressure set point static characteristic (<i>Pr1</i>).  Typical value = 0,2.+++
| _n/a_

| <<pr2,`pr2`>>
//| [[slots_table.pr2]]<<pr2,`pr2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Second value of pressure set point static characteristic, corresponding to <i>Ps0</i> = 1,0 PU (<i>Pr2</i>).  Typical value = 0,75.+++
| _n/a_

| <<psmn,`psmn`>>
//| [[slots_table.psmn]]<<psmn,`psmn`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum value of pressure set point static characteristic (<i>Psmn</i>).  Typical value = 1.+++
| _n/a_

| <<rsmimn,`rsmimn`>>
//| [[slots_table.rsmimn]]<<rsmimn,`rsmimn`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum value of integral regulator (<i>Rsmimn</i>).  Typical value = 0.+++
| _n/a_

| <<rsmimx,`rsmimx`>>
//| [[slots_table.rsmimx]]<<rsmimx,`rsmimx`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum value of integral regulator (<i>Rsmimx</i>).  Typical value = 1,1.+++
| _n/a_

| <<rvgmn,`rvgmn`>>
//| [[slots_table.rvgmn]]<<rvgmn,`rvgmn`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum value of integral regulator (<i>Rvgmn</i>).  Typical value = 0.+++
| _n/a_

| <<rvgmx,`rvgmx`>>
//| [[slots_table.rvgmx]]<<rvgmx,`rvgmx`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum value of integral regulator (<i>Rvgmx</i>).  Typical value = 1,2.+++
| _n/a_

| <<srmn,`srmn`>>
//| [[slots_table.srmn]]<<srmn,`srmn`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum valve opening (<i>Srmn</i>).  Typical value = 0.+++
| _n/a_

| <<srmx,`srmx`>>
//| [[slots_table.srmx]]<<srmx,`srmx`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum valve opening (<i>Srmx</i>).  Typical value = 1,1.+++
| _n/a_

| <<srsmp,`srsmp`>>
//| [[slots_table.srsmp]]<<srsmp,`srsmp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Intercept valves characteristic discontinuity point (<i>Srsmp</i>).  Typical value = 0,43.+++
| _n/a_

| <<svmn,`svmn`>>
//| [[slots_table.svmn]]<<svmn,`svmn`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum regulator gate closing velocity (<i>Svmn</i>).  Typical value = -0,0333.+++
| _n/a_

| <<svmx,`svmx`>>
//| [[slots_table.svmx]]<<svmx,`svmx`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum regulator gate opening velocity (<i>Svmx</i>).  Typical value = 0,0333.+++
| _n/a_

| <<ta,`ta`>>
//| [[slots_table.ta]]<<ta,`ta`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Control valves rate opening time (<i>Ta</i>) (&gt;= 0).  Typical value = 0,8.+++
| _n/a_

| <<tam,`tam`>>
//| [[slots_table.tam]]<<tam,`tam`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intercept valves rate opening time (<i>Tam</i>) (&gt;= 0).  Typical value = 0,8.+++
| _n/a_

| <<tc,`tc`>>
//| [[slots_table.tc]]<<tc,`tc`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Control valves rate closing time (<i>Tc</i>) (&gt;= 0).  Typical value = 0,5.+++
| _n/a_

| <<tcm,`tcm`>>
//| [[slots_table.tcm]]<<tcm,`tcm`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intercept valves rate closing time (<i>Tcm</i>) (&gt;= 0).  Typical value = 0,5.+++
| _n/a_

| <<tdc,`tdc`>>
//| [[slots_table.tdc]]<<tdc,`tdc`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Derivative time constant of pressure regulator (<i>Tdc</i>) (&gt;= 0).  Typical value = 90.+++
| _n/a_

| <<tf1,`tf1`>>
//| [[slots_table.tf1]]<<tf1,`tf1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of fuel regulation (<i>Tf1</i>) (&gt;= 0).  Typical value = 10.+++
| _n/a_

| <<tf2,`tf2`>>
//| [[slots_table.tf2]]<<tf2,`tf2`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of steam chest (<i>Tf2</i>) (&gt;= 0).  Typical value = 10.+++
| _n/a_

| <<thp,`thp`>>
//| [[slots_table.thp]]<<thp,`thp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++High pressure (HP) time constant of the turbine (<i>Thp</i>) (&gt;= 0).  Typical value = 0,15.+++
| _n/a_

| <<tmp,`tmp`>>
//| [[slots_table.tmp]]<<tmp,`tmp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Low pressure (LP) time constant of the turbine (<i>Tmp</i>) (&gt;= 0).  Typical value = 0,4.+++
| _n/a_

| <<trh,`trh`>>
//| [[slots_table.trh]]<<trh,`trh`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Reheater  time constant of the turbine (<i>Trh</i>) (&gt;= 0).  Typical value = 10.+++
| _n/a_

| <<tv,`tv`>>
//| [[slots_table.tv]]<<tv,`tv`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Boiler time constant (<i>Tv</i>) (&gt;= 0).  Typical value = 60.+++
| _n/a_

| <<ty,`ty`>>
//| [[slots_table.ty]]<<ty,`ty`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Control valves servo time constant (<i>Ty</i>) (&gt;= 0).  Typical value = 0,1.+++
| _n/a_

| <<y,`y`>>
//| [[slots_table.y]]<<y,`y`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Coefficient of linearized equations of turbine (Stodola formulation) (<i>Y</i>).  Typical value = 0,13.+++
| _n/a_

| <<yhpmn,`yhpmn`>>
//| [[slots_table.yhpmn]]<<yhpmn,`yhpmn`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum control valve position (<i>Yhpmn</i>).  Typical value = 0.+++
| _n/a_

| <<yhpmx,`yhpmx`>>
//| [[slots_table.yhpmx]]<<yhpmx,`yhpmx`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum control valve position (<i>Yhpmx</i>).  Typical value = 1,1.+++
| _n/a_

| <<ympmn,`ympmn`>>
//| [[slots_table.ympmn]]<<ympmn,`ympmn`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum intercept valve position (<i>Ympmn</i>).  Typical value = 0.+++
| _n/a_

| <<ympmx,`ympmx`>>
//| [[slots_table.ympmx]]<<ympmx,`ympmx`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum intercept valve position (<i>Ympmx</i>).  Typical value = 1,1.+++
| _n/a_

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
//| [[slots_table.AsynchronousMachineDynamics]]<<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1 +
xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
//| [[slots_table.TurbineLoadControllerDynamics]]<<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1 +
xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.AsynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#cpsmn]
=== `cpsmn`
+++Minimum value of pressure regulator output (<i>Cpsmn</i>).  Typical value = -1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.cpsmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.cpsmn,&#10548;>>
--
////


//[discrete]
[#cpsmx]
=== `cpsmx`
+++Maximum value of pressure regulator output (<i>Cpsmx</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.cpsmx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.cpsmx,&#10548;>>
--
////


//[discrete]
[#crmn]
=== `crmn`
+++Minimum value of regulator set-point (<i>Crmn</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.crmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.crmn,&#10548;>>
--
////


//[discrete]
[#crmx]
=== `crmx`
+++Maximum value of regulator set-point (<i>Crmx</i>).  Typical value = 1,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.crmx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.crmx,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kdc]
=== `kdc`
+++Derivative gain of pressure regulator (<i>Kdc</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kdc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kdc,&#10548;>>
--
////


//[discrete]
[#kf1]
=== `kf1`
+++Frequency bias (reciprocal of droop) (<i>Kf1</i>).  Typical value = 20.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kf1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kf1,&#10548;>>
--
////


//[discrete]
[#kf3]
=== `kf3`
+++Frequency control (reciprocal of droop) (<i>Kf3</i>).  Typical value = 20.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kf3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kf3,&#10548;>>
--
////


//[discrete]
[#khp]
=== `khp`
+++Fraction  of total turbine output generated by HP part (<i>Khp</i>).  Typical value = 0,35.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.khp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.khp,&#10548;>>
--
////


//[discrete]
[#kic]
=== `kic`
+++Integral gain of pressure regulator (<i>Kic</i>).  Typical value = 0,0033.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kic`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kic,&#10548;>>
--
////


//[discrete]
[#kip]
=== `kip`
+++Integral gain of pressure feedback regulator (<i>Kip</i>).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kip`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kip,&#10548;>>
--
////


//[discrete]
[#kit]
=== `kit`
+++Integral gain of electro-hydraulic regulator (<i>Kit</i>).  Typical value = 0,04.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kit`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kit,&#10548;>>
--
////


//[discrete]
[#kmp1]
=== `kmp1`
+++First gain coefficient of  intercept valves characteristic (<i>Kmp1</i>).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kmp1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kmp1,&#10548;>>
--
////


//[discrete]
[#kmp2]
=== `kmp2`
+++Second gain coefficient of intercept valves characteristic (<i>Kmp2</i>).  Typical value = 3,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kmp2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kmp2,&#10548;>>
--
////


//[discrete]
[#kpc]
=== `kpc`
+++Proportional gain of pressure regulator (<i>Kpc</i>).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kpc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kpc,&#10548;>>
--
////


//[discrete]
[#kpp]
=== `kpp`
+++Proportional gain of pressure feedback regulator (<i>Kpp</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kpp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kpp,&#10548;>>
--
////


//[discrete]
[#kpt]
=== `kpt`
+++Proportional gain of electro-hydraulic regulator (<i>Kpt</i>).  Typical value = 0,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.kpt`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kpt,&#10548;>>
--
////


//[discrete]
[#krc]
=== `krc`
+++Maximum variation of fuel flow (<i>Krc</i>).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.krc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.krc,&#10548;>>
--
////


//[discrete]
[#ksh]
=== `ksh`
+++Pressure loss due to flow friction in the boiler tubes (<i>Ksh</i>).  Typical value = 0,08.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.ksh`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ksh,&#10548;>>
--
////


//[discrete]
[#lpi]
=== `lpi`
+++Maximum negative power error (<i>Lpi</i>).  Typical value = -0,15.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.lpi`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.lpi,&#10548;>>
--
////


//[discrete]
[#lps]
=== `lps`
+++Maximum positive power error (<i>Lps</i>).  Typical value = 0,03.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.lps`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.lps,&#10548;>>
--
////


//[discrete]
[#mnef]
=== `mnef`
+++Lower limit for frequency correction (<i>MN</i><i><sub>EF</sub></i>).  Typical value = -0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.mnef`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.mnef,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#mxef]
=== `mxef`
+++Upper limit for frequency correction (<i>MX</i><i><sub>EF</sub></i>).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.mxef`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.mxef,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#pr1]
=== `pr1`
+++First value of pressure set point static characteristic (<i>Pr1</i>).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.pr1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pr1,&#10548;>>
--
////


//[discrete]
[#pr2]
=== `pr2`
+++Second value of pressure set point static characteristic, corresponding to <i>Ps0</i> = 1,0 PU (<i>Pr2</i>).  Typical value = 0,75.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.pr2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pr2,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#psmn]
=== `psmn`
+++Minimum value of pressure set point static characteristic (<i>Psmn</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.psmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.psmn,&#10548;>>
--
////


//[discrete]
[#rsmimn]
=== `rsmimn`
+++Minimum value of integral regulator (<i>Rsmimn</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.rsmimn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.rsmimn,&#10548;>>
--
////


//[discrete]
[#rsmimx]
=== `rsmimx`
+++Maximum value of integral regulator (<i>Rsmimx</i>).  Typical value = 1,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.rsmimx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.rsmimx,&#10548;>>
--
////


//[discrete]
[#rvgmn]
=== `rvgmn`
+++Minimum value of integral regulator (<i>Rvgmn</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.rvgmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.rvgmn,&#10548;>>
--
////


//[discrete]
[#rvgmx]
=== `rvgmx`
+++Maximum value of integral regulator (<i>Rvgmx</i>).  Typical value = 1,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.rvgmx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.rvgmx,&#10548;>>
--
////


//[discrete]
[#srmn]
=== `srmn`
+++Minimum valve opening (<i>Srmn</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.srmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.srmn,&#10548;>>
--
////


//[discrete]
[#srmx]
=== `srmx`
+++Maximum valve opening (<i>Srmx</i>).  Typical value = 1,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.srmx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.srmx,&#10548;>>
--
////


//[discrete]
[#srsmp]
=== `srsmp`
+++Intercept valves characteristic discontinuity point (<i>Srsmp</i>).  Typical value = 0,43.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.srsmp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.srsmp,&#10548;>>
--
////


//[discrete]
[#svmn]
=== `svmn`
+++Maximum regulator gate closing velocity (<i>Svmn</i>).  Typical value = -0,0333.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.svmn`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.svmn,&#10548;>>
--
////


//[discrete]
[#svmx]
=== `svmx`
+++Maximum regulator gate opening velocity (<i>Svmx</i>).  Typical value = 0,0333.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.svmx`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.svmx,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#ta]
=== `ta`
+++Control valves rate opening time (<i>Ta</i>) (&gt;= 0).  Typical value = 0,8.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.ta`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ta,&#10548;>>
--
////


//[discrete]
[#tam]
=== `tam`
+++Intercept valves rate opening time (<i>Tam</i>) (&gt;= 0).  Typical value = 0,8.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tam`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tam,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tc]
=== `tc`
+++Control valves rate closing time (<i>Tc</i>) (&gt;= 0).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tc,&#10548;>>
--
////


//[discrete]
[#tcm]
=== `tcm`
+++Intercept valves rate closing time (<i>Tcm</i>) (&gt;= 0).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tcm`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tcm,&#10548;>>
--
////


//[discrete]
[#tdc]
=== `tdc`
+++Derivative time constant of pressure regulator (<i>Tdc</i>) (&gt;= 0).  Typical value = 90.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tdc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tdc,&#10548;>>
--
////


//[discrete]
[#tf1]
=== `tf1`
+++Time constant of fuel regulation (<i>Tf1</i>) (&gt;= 0).  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tf1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tf1,&#10548;>>
--
////


//[discrete]
[#tf2]
=== `tf2`
+++Time constant of steam chest (<i>Tf2</i>) (&gt;= 0).  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tf2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tf2,&#10548;>>
--
////


//[discrete]
[#thp]
=== `thp`
+++High pressure (HP) time constant of the turbine (<i>Thp</i>) (&gt;= 0).  Typical value = 0,15.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.thp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.thp,&#10548;>>
--
////


//[discrete]
[#tmp]
=== `tmp`
+++Low pressure (LP) time constant of the turbine (<i>Tmp</i>) (&gt;= 0).  Typical value = 0,4.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tmp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tmp,&#10548;>>
--
////


//[discrete]
[#trh]
=== `trh`
+++Reheater  time constant of the turbine (<i>Trh</i>) (&gt;= 0).  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.trh`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.trh,&#10548;>>
--
////


//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.TurbineLoadControllerDynamics,&#10548;>>
--
////


//[discrete]
[#tv]
=== `tv`
+++Boiler time constant (<i>Tv</i>) (&gt;= 0).  Typical value = 60.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.tv`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tv,&#10548;>>
--
////


//[discrete]
[#ty]
=== `ty`
+++Control valves servo time constant (<i>Ty</i>) (&gt;= 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.ty`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ty,&#10548;>>
--
////


//[discrete]
[#y]
=== `y`
+++Coefficient of linearized equations of turbine (Stodola formulation) (<i>Y</i>).  Typical value = 0,13.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.y`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.y,&#10548;>>
--
////


//[discrete]
[#yhpmn]
=== `yhpmn`
+++Minimum control valve position (<i>Yhpmn</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.yhpmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.yhpmn,&#10548;>>
--
////


//[discrete]
[#yhpmx]
=== `yhpmx`
+++Maximum control valve position (<i>Yhpmx</i>).  Typical value = 1,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.yhpmx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.yhpmx,&#10548;>>
--
////


//[discrete]
[#ympmn]
=== `ympmn`
+++Minimum intercept valve position (<i>Ympmn</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.ympmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ympmn,&#10548;>>
--
////


//[discrete]
[#ympmx]
=== `ympmx`
+++Maximum intercept valve position (<i>Ympmx</i>).  Typical value = 1,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV4.ympmx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ympmx,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
